src/index.css
@import 'tailwindcss';

@theme {
  --color-dark: #0e0e10;
  --color-dark-light: #1a1a1b;
  --color-dark-hover: #292828;
  --animate-spin: spin 1s linear infinite;
  @keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }
}

body {
  background-color: #0e0e10;
  margin: 0;
  color: white;
  scrollbar-gutter: stable;
}

ul {
  border: 0;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.background {
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%;
  width: 100%;
}

a,
a:visited,
a:hover,
a:active {
  text-decoration: none !important;
}

.thumbnail {
  vertical-align: top;
  max-width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

*:focus {
  outline: none;
}

input[type='date']::-webkit-calendar-picker-indicator {
  filter: invert(1);
  cursor: pointer;
}

